noinst_LTLIBRARIES = libbase14fonts.la

libbase14fonts_la_SOURCES = \
	Base14Fonts.cpp \
	Base14Fonts.hpp \
	Dingbats.cff.cpp \
	NimbusMonoPS-Bold.cff.cpp \
	NimbusMonoPS-BoldItalic.cff.cpp \
	NimbusMonoPS-Italic.cff.cpp \
	NimbusMonoPS-Regular.cff.cpp \
	NimbusRoman-Bold.cff.cpp \
	NimbusRoman-BoldItalic.cff.cpp \
	NimbusRoman-Italic.cff.cpp \
	NimbusRoman-Regular.cff.cpp \
	NimbusSans-Bold.cff.cpp \
	NimbusSans-BoldItalic.cff.cpp \
	NimbusSans-Italic.cff.cpp \
	NimbusSans-Regular.cff.cpp \
	StandardSymbolsPS.cff.cpp
