noinst_LTLIBRARIES = liboptimizer.la

liboptimizer_la_SOURCES = \
	AttributeExtractor.hpp      AttributeExtractor.cpp \
	DependencyGraph.hpp \
	GroupCollapser.hpp          GroupCollapser.cpp  \
	OptimizerModule.hpp \
	RedundantElementRemover.hpp RedundantElementRemover.cpp \
	SVGOptimizer.hpp            SVGOptimizer.cpp \
	TransformSimplifier.hpp     TransformSimplifier.cpp \
  	WSNodeRemover.hpp           WSNodeRemover.cpp

