## This file is part of dvisvgm
## Copyright (C) 2016-2017 Martin Gieseking <martin.gieseking@uos.de>
##
## Process this file with automake.

EXTRA_DIST = \
	cidjmgr0-h.tfm \
	cmr10.600gf \
	cmr10.tfm \
	dvipdfm_test.map \
	dvips_test.map \
	frktest.dvi \
	frktest-nf-cmp.svg \
	frktest-wf-cmp.svg \
	sample.dvi \
	sample-nf-cmp.svg \
	sample.sfd \
	sample-wf-cmp.svg \
	ot1.cmap

