## This file is part of dvisvgm
## Copyright (C) 2016-2020 Martin Gieseking <martin.gieseking@uos.de>
##
## Process this file with automake.

EXTRA_DIST = \
	cidjmgr0-h.tfm \
	cmr10.600gf \
	cmr10.pfb \
	cmr10.tfm \
	dvipdfm_test.map \
	dvips_test.map \
	frktest.dvi \
	frktest-nf-cmp.svg \
	frktest-wf-cmp.svg \
	sample.dvi \
	sample-nf-cmp.svg \
	sample.sfd \
	sample-wf-cmp.svg \
	sample_v2.dvi \
	sample_v3.dvi \
	ot1.cmap

